tfg/debug.log
Internal Server Error: /
Traceback (most recent call last):
  File "/usr/local/lib/python2.7/dist-packages/django/core/handlers/base.py", line 132, in get_response
    response = wrapped_callback(request, *callback_args, **callback_kwargs)
  File "/home/tfg15/Dropbox/gnucashdjango/tfg/gnucash/views.py", line 10, in home
    log = logging.getLogger(__name__)
NameError: global name 'logging' is not defined
prueba log
Internal Server Error: /
Traceback (most recent call last):
  File "/usr/local/lib/python2.7/dist-packages/django/core/handlers/base.py", line 119, in get_response
    resolver_match = resolver.resolve(request.path_info)
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 367, in resolve
    sub_match = pattern.resolve(new_path)
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 239, in resolve
    return ResolverMatch(self.callback, args, kwargs, self.name)
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 246, in callback
    self._callback = get_callable(self._callback_str)
  File "/usr/local/lib/python2.7/dist-packages/django/utils/lru_cache.py", line 101, in wrapper
    result = user_function(*args, **kwds)
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 105, in get_callable
    mod = import_module(mod_name)
  File "/usr/lib/python2.7/importlib/__init__.py", line 37, in import_module
    __import__(name)
  File "/home/tfg15/Dropbox/gnucashdjango/tfg/gnucash/views.py", line 27
    transaction.currency_guid = #cogersmkndoc
                                            ^
SyntaxError: invalid syntax
Not Found: /patata
Not Found: /patata
Not Found: /patata
Not Found: /asiento_nuevo_ture.html
Not Found: /asiento_nuevo_ture.html
Internal Server Error: /asiento_nuevo_ture.html
Traceback (most recent call last):
  File "/usr/local/lib/python2.7/dist-packages/django/core/handlers/base.py", line 108, in get_response
    response = middleware_method(request)
  File "/usr/local/lib/python2.7/dist-packages/django/middleware/common.py", line 74, in process_request
    if (not urlresolvers.is_valid_path(request.path_info, urlconf) and
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 646, in is_valid_path
    resolve(path, urlconf)
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 521, in resolve
    return get_resolver(urlconf).resolve(path)
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 367, in resolve
    sub_match = pattern.resolve(new_path)
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 239, in resolve
    return ResolverMatch(self.callback, args, kwargs, self.name)
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 246, in callback
    self._callback = get_callable(self._callback_str)
  File "/usr/local/lib/python2.7/dist-packages/django/utils/lru_cache.py", line 101, in wrapper
    result = user_function(*args, **kwds)
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 114, in get_callable
    (lookup_view, mod_name))
ViewDoesNotExist: Could not import 'gnucash.view.guardar_asiento'. Parent module gnucash.view does not exist.
Internal Server Error: /asiento_nuevo_ture.html
Traceback (most recent call last):
  File "/usr/local/lib/python2.7/dist-packages/django/core/handlers/base.py", line 108, in get_response
    response = middleware_method(request)
  File "/usr/local/lib/python2.7/dist-packages/django/middleware/common.py", line 74, in process_request
    if (not urlresolvers.is_valid_path(request.path_info, urlconf) and
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 646, in is_valid_path
    resolve(path, urlconf)
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 521, in resolve
    return get_resolver(urlconf).resolve(path)
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 367, in resolve
    sub_match = pattern.resolve(new_path)
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 239, in resolve
    return ResolverMatch(self.callback, args, kwargs, self.name)
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 246, in callback
    self._callback = get_callable(self._callback_str)
  File "/usr/local/lib/python2.7/dist-packages/django/utils/lru_cache.py", line 101, in wrapper
    result = user_function(*args, **kwds)
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 114, in get_callable
    (lookup_view, mod_name))
ViewDoesNotExist: Could not import 'gnucash.view.guardar_asiento'. Parent module gnucash.view does not exist.
Forbidden (CSRF cookie not set.): /asiento_nuevo_ture.html
Forbidden (CSRF cookie not set.): /asiento_nuevo_ture.html
Forbidden (CSRF cookie not set.): /asiento_nuevo_ture.html
Forbidden (CSRF cookie not set.): /asiento_nuevo_ture.html
Forbidden (CSRF cookie not set.): /asiento_nuevo_ture.html
Forbidden (CSRF cookie not set.): /asiento_nuevo_ture.html
Forbidden (CSRF cookie not set.): /asiento_nuevo_ture.html
Forbidden (CSRF cookie not set.): /asiento_nuevo_ture.html
Forbidden (CSRF cookie not set.): /asiento_nuevo_ture.html
